# hackathon

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/contracts/: auction.rs  counter.rs  mod.rs  voting.rs
src/examples/: ai_model.rs  hello_world.rs  mod.rs  simple_storage.rs  token.rs
